--- a/xrdemo.html
+++ b/xrdemo.html
@@ -13,6 +13,8 @@
 			<h2 id="header">WebXR VR Demo</h2>
 			<button id="xr-button" disabled>VR initialisation...</button>
 		</header>
+      <div id="console">
+      </div>
         <script type="text/javascript" src="./js/ezgl.js"></script>
         <script type="text/javascript" src="./js/ezgfx.js"></script>
     <script type="text/javascript" type="module" src="./js/xrdemo.js"></script>
