add threejs example

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			<h2 id="header">Web API Demos</h2>
 		</header>
       <ul>
+         <li><a href="xr3.html">XR three js</a></li>
          <li><a href="xrdemo.html">XR Demo</a></li>
          <li><a href="usb-test/index.html">WebUSB demo</a></li>
       </ul>
