--- a/xr3.html
+++ b/xr3.html
@@ -17,6 +17,6 @@
         </script>
 	</head>
 	<body>
-		<script type="module" src="/xr3.js"></script>
+		<script type="module" src="xr3.js"></script>
 	</body>
 </html>
