--- a/xr3.html
+++ b/xr3.html
@@ -11,7 +11,7 @@
           {
             "imports": {
               "three": "https://unpkg.com/three@0.152.2/build/three.module.js",
-              "three/addons/": "https://unpkg.com/three@0.152.2/examples/jsm/",
+              "three/addons/": "https://unpkg.com/three@0.152.2/examples/jsm/"
             }
           }
         </script>
